--- a/quiz.html
+++ b/quiz.html
@@ -4,18 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
+    <link rel="stylesheet" href="./quiz.css">
 </head>
 <body>
     <div class="app">
         <h1>Simple Quiz</h1>
-        <div class="Quiz">
-            <h2>Question Goes Here</h2>
-            <div id="ansewer-buttons">
+        <div class="quiz">
+            <h2 id="question">Question Goes Here</h2>
+            <div class="answers" id="ansewer-buttons">
                 <button class="btn">Answer 1</button>
                 <button class="btn">Answer 2</button>
                 <button class="btn">Answer 3</button>
                 <button class="btn">Answer 4</button>
             </div>
+            <button 
+            class="button-87" id="next-button">N e x t</button>
         </div>
     </div>
 </body>
