--- a/quiz.html
+++ b/quiz.html
@@ -17,9 +17,10 @@
                 <button class="btn">Answer 3</button>
                 <button class="btn">Answer 4</button>
             </div>
-            <button 
+            <button  
             class="button-87" id="next-button">N e x t</button>
         </div>
     </div>
+    <script src="./quiz.js"></script>
 </body>
 </html>
